Bug 464704 - `spectacle --edit-existing` does not open with annotation tools shown
Summary: `spectacle --edit-existing` does not open with annotation tools shown
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-01-23 17:50 UTC by Kai Uwe Broulik
Modified: 2023-02-01 15:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2023-01-23 17:50:46 UTC
SUMMARY
When taking a screenshot through shortcut and then clicking "Annotate" on the notification, Spectacle window opens but not in Annotate mode.

STEPS TO REPRODUCE
1. spectacle -br
2. Take rectangular selection screenshot
3. Click "Annotate" on the notification

OBSERVED RESULT
Spectacle main window just opens and I have to click "Show annotation tools" to annotate

EXPECTED RESULT
Spectacle main window opens in annotation mode

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2023-01-22

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-01-24 19:18:23 UTC
Looks like it's because `spectacle --edit-existing` is broken now.
Comment 2 Noah Davis 2023-01-30 11:56:14 UTC
(In reply to Nate Graham from comment #1)
> Looks like it's because `spectacle --edit-existing` is broken now.

For me, it works fine. It looks like the problem is that annotation tools are not shown by default, not that it's fundamentally broken. You should still be able to edit an existing image, it's just that there are extra steps in the UI between showing the existing screenshot and adding annotations.
Comment 3 Bug Janitor Service 2023-01-31 02:35:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/194
Comment 4 Noah Davis 2023-01-31 14:22:32 UTC
Git commit 14198528686ebeb74b2eae1f9444d193b518325e by Noah Davis.
Committed on 31/01/2023 at 03:10.
Pushed by ndavis into branch 'master'.

Enable annotating when editing an existing image

M  +3    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/14198528686ebeb74b2eae1f9444d193b518325e