Enable annotating when editing an existing image

BUG: 464704